added 3 boxes to the portfolio section of wed development page

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -2,3 +2,10 @@
 @import "alert";
 @import "avatar";
 @import "navbar";
+@import "footer";
+@import "banner";
+@import "svg-skills";
+@import "tooltips";
+@import "hex";
+@import "buttons";
+@import "card";
