--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,12 +1,78 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: white;
+  background-color: transparent;
+  transition: 0.5s background-color ease;
 }
 
+.navbar-brand{
+  width: 65px;
+}
+.navbar-lewagon-home {
+  .nav-item {
+  text-decoration: none;
+  .login-home {
+    a {
+      margin: 0 0 0 0;
+    }
+  }
+
+  a {
+    text-decoration: none;
+    margin: 0 0 0 35px;
+    color: white;
+    }
+  }
+}
+
+.navbar-lewagon-white {
+  background-color: white;
+  .nav-item {
+    text-decoration: none;
+    a {
+      text-decoration: none;
+      margin: 0 0 0 35px;
+      color: gray;
+    }
+  }
+}
 .navbar-lewagon .navbar-collapse {
   flex-grow: 0;
 }
 
-.navbar-lewagon .navbar-brand img {
-  width: 40px;
+.nav-item {
+  text-decoration: none;
+  a {
+    text-decoration: none;
+    margin: 0 0 0 35px;
+    color: gray;
+  }
 }
+.nav-main-items {
+  margin-top: 3px;
+  li {
+    display: inline-block;
+  }
+}
+
+.fa-user {
+  a {
+    text-decoration: none;
+  }
+}
+
+#navbar-two-white {
+  background-color: white;
+  position: sticky;
+}
+
+.dropdown-menu {
+  a {
+    text-align: center !important;
+    margin: 0 0 0 0 !important;
+  }
+}
+
+.black {
+  color: gray !important;
+}
+
