--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -3,9 +3,10 @@
     <div class="footer-container">
       <nav>
         <ul>
-          <li><%= link_to "Contact", "#" %></li>
-          <li><%= link_to "Terms of Use", "#" %></li>
-          <li><%= link_to "Privacy Policy", "#" %></li>
+          <!-- <li><i class="fab fa-github fa-2x"></i></li>
+          <li><i class="fab fa-linkedin fa-2x"></i></li>
+          <li><i class="fab fa-instagram fa-2x"></i></li>
+          <li><i class="fas fa-envelope-open-text fa-2x"></i></li> -->
           <li>©Mohamed Raza Pirbhai</li>
         </ul>
       </nav>
