--- a/app/views/pages/programming.html.erb
+++ b/app/views/pages/programming.html.erb
@@ -8,7 +8,7 @@
         </div>
         <!-- <button class="dev-page-btn" onclick="scrollToBottom()">
         </button> -->
-          <i class="far fa-arrow-alt-circle-down fa-4x" class="dev-page-btn" onclick="scrollToBottom()"></i>
+          <i class="far fa-arrow-alt-circle-down fa-4x" class="dev-page-btn" onclick="scrollToBottom()" title="Start"></i>
       </div>
   </div>
 
@@ -17,7 +17,7 @@
       <div class="intro">
         <p>Whatever has driven you to my page, Welcome 👋🏽!</p>
         <p>I'm Raza, Real Estate enthusiast turned Full-Stack web developed.I'm based in Mauritius 🇲🇺, Tanzania 🇹🇿 & the Uk🇬🇧. </p>
-        <p>I've always had a passion for building whether it be bricks & mortar or models, view & controllers. If im not fixing bugs or learning about algorithms you can catch me on the golf course, diving at sea or the front of a protest.</p>
+        <p>I've always had a passion for building whether it be bricks & mortar or models, view & controllers. If im not fixing bugs or learning about algorithms you can catch me on the golf course, diving at sea or at the front of a protest.</p>
       </div>
     </div>
   </div>
@@ -25,7 +25,7 @@
   <div class="program-bottom">
     <div class="bottom-info">
       <div class="second-info">
-        <h1>Technical Skills & Languages</h1>
+        <h1>Languages & Frameworks</h1>
         <div class="bottom-info-skills">
           <p>After completed a full stack coding bootcamp in London, where I learnt Ruby, Javascript, Ruby-on-rail and HTML I continued my learning journey & I am currently learning React and Python.</p>
         </div>
@@ -34,25 +34,24 @@
     <div class="skills">
       <div class = "gallery">
         <div class="clipped-border" class="tooltip">
-          <img src="https://cdn3.iconfinder.com/data/icons/popular-services-brands-vol-2/512/ruby-on-rails-512.png" id="clipped">
+          <img src="https://cdn3.iconfinder.com/data/icons/popular-services-brands-vol-2/512/ruby-on-rails-512.png" id="clipped" title="Ruby-on-rail">
         </div>
         <div class="clipped-border">
-          <img src="https://pngimage.net/wp-content/uploads/2018/06/react-icon-png-7.png" id="clipped">
+          <img src="https://pngimage.net/wp-content/uploads/2018/06/react-icon-png-7.png" id="clipped" title="React">
         </div>
         <div class="clipped-border">
-          <img src="//inf3cti0n95.github.io/img/html5.svg" id="clipped">
+          <img src="//inf3cti0n95.github.io/img/html5.svg" id="clipped" title="HTML 5">
         </div>
           <div class="clipped-border">
-          <img src="//inf3cti0n95.github.io/img/js.svg" id="clipped">
+          <img src="//inf3cti0n95.github.io/img/js.svg" id="clipped" title="Javascript">
         </div>
         <div class="clipped-border">
-          <img src="https://cdn2.iconfinder.com/data/icons/love-and-valentine-3-4/65/142-512.png" id="clipped">
+          <img src="https://cdn2.iconfinder.com/data/icons/love-and-valentine-3-4/65/142-512.png" id="clipped" title="Ruby">
         </div>
         <div class="clipped-border">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Python-logo-notext.svg/1024px-Python-logo-notext.svg.png" id="clipped">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Python-logo-notext.svg/1024px-Python-logo-notext.svg.png" id="clipped" title="Python">
         </div>
-<!--         <div class = "shadow"></div>
- -->      </div>
+      </div>
     </div>
   </div>
 
@@ -75,6 +74,7 @@
              <!-- <h3><strong>Languages Used</strong></h3> -->
              <i class="fab fa-js fa-2x" title="Javascript"></i>
              <i class="fas fa-gem fa-2x" title="Ruby"></i>
+             <div class="visit-btn"> Visit</div>
           </div>
         </div>
       </a>
@@ -92,6 +92,7 @@
              <!-- <h3><strong>Languages Used</strong></h3> -->
              <i class="fab fa-js fa-2x" title="Javascript"></i>
              <i class="fas fa-gem fa-2x" title="Ruby"></i>
+             <div class="visit-btn"> Visit</div>
           </div>
         </div>
       </a>
@@ -109,6 +110,7 @@
              <!-- <h3><strong>Languages Used</strong></h3> -->
              <i class="fab fa-js fa-2x" title="Javascript"></i>
              <i class="fas fa-gem fa-2x" title="Ruby"></i>
+             <div class="visit-btn"> Visit</div>
           </div>
         </div>
       </a>
@@ -127,6 +129,7 @@
              <i class="fab fa-js fa-2x" title="Javascript"></i>
              <i class="fas fa-gem fa-2x" title="Ruby"></i>
              <i class="fab fa-python fa-2x" title="Python"></i>
+             <div class="visit-btn"> Visit</div>
         </div>
       </div>
       </a>
@@ -134,23 +137,23 @@
   </div>
   <div class="dark-bottom" id="getintouch" tabindex="-1" style="outline: none;">
     <div class="top-link">
-      <i class="far fa-arrow-alt-circle-up fa-4x" class="dev-page-btn" onclick="scrollToTop()" id="scroll-top"></i>
+      <i class="far fa-arrow-alt-circle-up fa-4x" class="dev-page-btn" onclick="scrollToTop()" id="scroll-top" title="Top"></i>
     </div>
     <div class="container">
       <h2 class="text-center">Get in touch</h2>
       <p class="text-center">Contact me on any of the following</p>
       <div class="social">
         <a href="https://github.com/lazyrayza" target="_blank">
-          <i class="fab fa-github-square"></i>
+          <i class="fab fa-github-square" title="GitHub"></i>
         </a>
         <a href="https://www.facebook.com/razaJ13" target="_blank">
-          <i class="fab fa-facebook-square"></i>
+          <i class="fab fa-facebook-square" title="Facebook"></i>
         </a>
         <a href="mailto:razapirbhai4@gmail.com" target="_blank">
-          <i class="fas fa-envelope-open-text"></i>
+          <i class="fas fa-envelope-open-text" title="E-mail"></i>
         </a>
-        <a href="https://www.linkedin.com/in/arthur-littmann/" target="_blank">
-          <i class="fab fa-linkedin"></i>
+        <a href="https://www.linkedin.com/in/m-raza-pirbhai/" target="_blank">
+          <i class="fab fa-linkedin" title="Linkedin"></i>
         </a>
       </div>
     </div>
@@ -160,13 +163,14 @@
 
 
 <script>
-var elmnt = document.getElementById("content");
+var elmnt1 = document.getElementById("content");
 
 
 function scrollToBottom() {
-  elmnt.scrollIntoView({behavior: "smooth"}); // Bottom
+  elmnt1.scrollIntoView({behavior: "smooth"}); // Bottom
 }
 </script>
+
 <script>
 var elmnt = document.getElementById("particle-canvas");
 
