--- a/app/assets/stylesheets/pages/_programming.scss
+++ b/app/assets/stylesheets/pages/_programming.scss
@@ -33,19 +33,29 @@
   display: flex;
   justify-content: center;
 }
-// .bottom-info-skills {
-//     overflow: scroll;
-//   }
+.bottom-info-skills {
+    overflow: scroll;
+    width: 80%;
+    margin: auto;
+    box-shadow: 15px 15px 5px 2px rgba(232,232,232,0.61);
+    border-radius: 8px;
+  }
 
 .second-info {
 display: flex;
 flex-direction: column;
 justify-content: center;
+margin: 15%;
+  h1{
+    font-size: 3rem;
+    text-shadow: 7px 7px 5px rgba(173,172,170,0.55);
+    font-family: "Fira Sans";
+  }
 }
 
 .projects {
   height: 100%;
-    background: white;
+    // background: white;
     // display: flex;
     h1 {
 
@@ -56,10 +66,16 @@ justify-content: center;
   }
   .projects-title{
     display: flex;
-    align-self: center;
+    // align-self: center;
 
   .title-box{
     align-item: center;
+    margin: auto;
+    h1 {
+      font-family: "Fira Sans";
+      font-size: 3rem;
+      text-shadow: 7px 7px 5px rgba(173,172,170,0.55);
+    }
   }
   }
 }
@@ -103,5 +119,7 @@ justify-content: center;
     }
 a:hover {
   color: #4286f4;
+  font-size: 6rem;
 }
 }
+
