--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,21 +12,17 @@
     <ul class="navbar-nav mr-auto">
       <div class="nav-main-items">
         <li class="nav-item">
-          <%= link_to "Home" %>
+          <%= link_to root_path %>
         </li>
         <li class="nav-item">
           <%= link_to "Notifications" %>
         </li>
-        <li class="nav-item">
-          <%= link_to "Contact Us" %>
-        </li>
-
       </div>
-      <ul class="nav-item dropdown">
+      <!-- <ul class="nav-item dropdown">
         <%= image_tag "logo.png", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
           <%= link_to "Settings", "#", class: "dropdown-item black" %>
-        </ul>
+        </ul> -->
         </div>
       </li>
     </ul>
