--- a/app/views/shared/_navbar_pages.html.erb
+++ b/app/views/shared/_navbar_pages.html.erb
@@ -6,7 +6,14 @@
     <ul class="navbar-nav mr-auto">
       <div class="nav-main-items">
         <li class="nav-item">
-          <a href="/programming#getintouch" >Get in Touch</a>
+          <%= link_to root_path do %>
+            Home
+          <% end %>
+        </li>
+        <li class="nav-item">
+          <%= link_to realestate_path do %>
+              Real Estate
+          <% end %>
         </li>
       </div>
       <!-- <ul class="nav-item dropdown">
