--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -9,3 +9,100 @@
 .far {
   margin-left: 300px;
 }
+
+.start-btn{
+  height: 40px;
+  width: 360px;
+  background: linear-gradient(45deg, #4286f4, #6ECAD6);
+  border-radius: 12px;
+  color: white;
+  margin: 10%;
+  text-align: center;
+  font-size: 1.5rem;
+  box-shadow: 0px 1px 43px 0px rgba(0,0,82,1);
+
+    &:hover{
+      transform: scale(1.3);
+      transition: ease 300ms;
+      padding: auto;
+      background: linear-gradient(45deg, #4286f4, #6ECAD6);
+      cursor: pointer;
+    }
+}
+
+.contact-btn{
+  height: 40px;
+  width: 360px;
+  background: linear-gradient(45deg, #4286f4, #6ECAD6);
+  border-radius: 12px;
+  color: white;
+  margin: 10%;
+  text-align: center;
+  font-size: 1.5rem;
+  box-shadow: 0px 1px 43px 0px rgba(0,0,82,1);
+
+    &:hover{
+      transform: scale(1.3);
+      transition: ease 300ms;
+      padding: auto;
+      background: linear-gradient(45deg, #4286f4, #6ECAD6);
+            cursor: pointer;
+
+    }
+}
+.buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+
+// Smallest device
+@media (min-width: 100px) and (max-width: 575px) {
+  .start-btn {
+    transform: scale(0.7);
+  }
+  .contact-btn {
+    transform: scale(0.7);
+  }
+}
+
+// Small devices (landscape phones, 576px and up)
+@media (min-width: 576px) {
+  .start-btn {
+    transform: scale(0.8);
+  }
+  .contact-btn {
+    transform: scale(0.8);
+  }
+}
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) {
+  .start-btn {
+    transform: scale(0.8);
+  }
+  .contact-btn {
+    transform: scale(0.8);
+  }
+}
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) {
+  .start-btn {
+    transform: scale(0.9);
+  }
+  .contact-btn {
+    transform: scale(0.9);
+  }
+}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) {
+  .start-btn {
+    transform: scale(1);
+  }
+  .contact-btn {
+    transform: scale(1);
+  }
+}
