--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,11 +1,12 @@
 .cards {
-  // display: grid;
-  // grid-template-columns: 1fr 1fr 1fr;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
   grid-gap: 16px;
   padding: 20px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
+  margin: auto;
+  // display: flex;
+  // flex-direction: column;
+  // justify-content: space-around;
 }
 
 .card-category {
@@ -42,13 +43,13 @@
 // Large devices (desktops, 992px and up)
 @media (min-width: 992px) {
   .cards {
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
   }
 }
 
 // Extra large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) {
   .cards {
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
   }
 }
