--- a/app/assets/stylesheets/components/_hex.scss
+++ b/app/assets/stylesheets/components/_hex.scss
@@ -11,9 +11,11 @@
 }
 
 .gallery{
-  position:relative;
+  position:absolute;
   height:100%;
   width:100%;
+  margin-left: 30%;
+  margin-bottom: 50%;
 }
 
 .gallery:after{
