--- a/app/assets/stylesheets/components/_hex.scss
+++ b/app/assets/stylesheets/components/_hex.scss
@@ -11,11 +11,15 @@
 }
 
 .gallery{
-  position:absolute;
+  // position:absolute;
+  display: grid;
+  grid-template-columns: repeat(3, 33%);
+  grid-gap: 60px 1px;
   height:100%;
   width:100%;
-  margin-left: 30%;
-  margin-bottom: 50%;
+  margin: 10px;
+  // margin-left: 30%;
+  // margin-bottom: 50%;
 }
 
 .gallery:after{
@@ -35,15 +39,15 @@ img{
    // background:linear-gradient(#E3E3E3, #E3E3E3);
    width:var(--border-width);
    height:var(--border-height);
-   max-height:200px;
-   max-width:200px;
+   max-height:150px;
+   max-width:150px;
    height: var(--height);
    width:var(--width);
    transition:transform 0.2s;
-   position:absolute;
+  justify-self: center;
+   // position:absolute;
    cursor:pointer;
    -webkit-filter: grayscale(50%);
-
 }
 
 
@@ -71,34 +75,33 @@ img{
 
 }
 
-.clipped-border:nth-child(2){
-  top:196px;
-  left:118px;
-}
+// .clipped-border:nth-child(2){
+//   top:196px;
+//   left:118px;
+// }
 
-.clipped-border:nth-child(3){
-  top:0;
-  left:235px;
-}
+// .clipped-border:nth-child(3){
+//   top:0;
+//   left:235px;
+// }
 
-.clipped-border:nth-child(4){
-  top:196px;
-  left:353px;
-}
+// .clipped-border:nth-child(4){
+//   top:196px;
+//   left:353px;
+// }
 
-.clipped-border:nth-child(5){
-  top:0;
-  left:470px;
-}
-.clipped-border:nth-child(6){
-  top:385px;
-  left:235px;
-}
+// .clipped-border:nth-child(5){
+//   top:0;
+//   left:470px;
+// }
+// .clipped-border:nth-child(6){
+//   top:385px;
+//   left:235px;
+// }
 
 #clipped {
 -webkit-clip-path: polygon(50% 0%, 95% 25%, 95% 75%, 50% 100%, 5% 75%, 5% 25%);
 clip-path: polygon(50% 0%, 95% 25%, 95% 75%, 50% 100%, 5% 75%, 5% 25%);
-
 
 }
 
