--- a/app/assets/stylesheets/pages/_programming.scss
+++ b/app/assets/stylesheets/pages/_programming.scss
@@ -9,8 +9,14 @@
     overflow: auto;
     justify-content: space-around;
     .intro {
-      width: 45%;
+      width: 55%;
+      font-size: 1.1rem;
+      padding: 30px;
       margin: auto;
+      border-radius: 24px;
+      box-shadow: 0px 1px 43px 0px rgba(189,189,189,1);
+
+
     }
   }
 }
@@ -56,6 +62,8 @@
     display: flex;
     justify-content: center;
     margin-bottom: 60px;
+    padding: 30px;
+
     h1 {
       font-family: "Fira Sans";
       font-size: 3rem;
@@ -64,7 +72,7 @@
       }
   }
   .skills {
-    width: 50%;
+    padding: auto;
   }
 }
 ///
@@ -72,7 +80,7 @@
 .dark-bottom{
   background-color: #404042;
   color: white;
-  height: 100%;
+  // height: 100%;
   .top-link {
     height: 60px;
     width: 60px;
