--- a/app/views/pages/programming.html.erb
+++ b/app/views/pages/programming.html.erb
@@ -113,22 +113,22 @@
     </div>
     <div class="skills">
       <div class = "gallery">
-        <div class="clipped-border" class="tooltip">
+        <div class="clipped-border" id="1">
           <img src="https://cdn2.iconfinder.com/data/icons/love-and-valentine-3-4/65/142-512.png" id="clipped" title="Ruby-on-rail">
         </div>
-        <div class="clipped-border">
+        <div class="clipped-border" id="2">
           <img src="https://cdn3.iconfinder.com/data/icons/popular-services-brands-vol-2/512/ruby-on-rails-512.png" id="clipped" title="React">
         </div>
-        <div class="clipped-border">
+        <div class="clipped-border" id="3">
           <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Python-logo-notext.svg/1024px-Python-logo-notext.svg.png" id="clipped" title="HTML 5">
         </div>
-          <div class="clipped-border">
+          <div class="clipped-border" id="4">
           <img src="https://pngimage.net/wp-content/uploads/2018/06/react-icon-png-7.png" id="clipped" title="Javascript">
         </div>
-        <div class="clipped-border">
+        <div class="clipped-border" id="5">
           <img src="//inf3cti0n95.github.io/img/js.svg" id="clipped" title="Ruby">
         </div>
-        <div class="clipped-border">
+        <div class="clipped-border" id="6">
           <img src="//inf3cti0n95.github.io/img/html5.svg" id="clipped" title="Python">
         </div>
       </div>
