--- a/app/assets/stylesheets/pages/_programming.scss
+++ b/app/assets/stylesheets/pages/_programming.scss
@@ -35,15 +35,15 @@
   }
   .projects-title{
     display: flex;
+    margin-top: 30px;
     // align-self: center;
 
   .title-box{
     width: 100%;
     display: flex;
     justify-content: center;
-    // margin: auto;
     h1 {
-      font-family: "Fira Sans";
+      // font-family: "Fira Sans";
       font-size: 3rem;
       text-shadow: 7px 7px 5px rgba(173,172,170,0.55);
     }
@@ -59,6 +59,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  // margin: 20px;
   .bottom-info {
     width: 100%;
     display: flex;
@@ -67,7 +68,7 @@
     padding: 30px;
 
     h1 {
-      font-family: "Fira Sans";
+      // font-family: "Fira Sans";
       font-size: 3rem;
       text-shadow: 7px 7px 5px rgba(173,172,170,0.55);
       margin-right:40px;
@@ -76,13 +77,22 @@
   .top-skilss{
     display:flex;
     justify-content: space-around;
+    margin: 10px;
   }
   .skills {
-    padding-left: 10%;
-    border-radius: 30%;
-      box-shadow: 0px 1px 43px 0px rgba(189,189,189,1);
-      width: 55%;
+    padding-left: 8%;
+    border-radius: 8%;
+      // box-shadow: 0px 1px 43px 0px rgba(189,189,189,1);
+      width: 50%;
+      height: 95%;
   }
+}
+.node-note{
+  border-radius: 8px;
+  box-shadow: 0px 1px 43px 0px rgba(189,189,189,1);
+  display:flex;
+  text-align: center;
+  width: 40%;
 }
 ///
 
